# Multimodal-SNN-Driven-Heterogeneous-Cooperative-Secure-Intelligent-Terminal

./: LICENSE  README.md
processor_a/: README_A.md  ble_client.py  platformio.ini
processor_a/include/: BUZZER.cpp  BUZZER.h  DHT11.cpp  DHT11.h  Edge_Inference.cpp  Edge_Inference.h  INA.cpp  INA.h  KEY.cpp  KEY.h  MIC.cpp  MIC.h  MPU.cpp  MPU.h  TriLED.cpp  TriLED.h  ble.cpp  ble.h  my_motor.cpp  my_motor.h  my_usart.cpp  my_usart.h  process_frame.cpp  process_frame.h  smd.cpp  smd.h  uart.h
processor_a/src/: main.cpp
processor_a/test/: ABOUT.md  PD42S1步进电机闭环驱动器用户手册_V1.2.txt  cankao.cpp  cankao2.cpp  go_strate.cpp  read_data.c
processor_a/test/backup/: Buzzer.cpp  (+4 more)
processor_b/: README_B.md  ble.cpp  ble.h  buzzer.cpp  buzzer.h  hand_det.h  infer.cpp  infer.h  main.cpp  mqtt.cpp  mqtt.h  quad_det.h  udp.c  udp.h
processor_c/: README_C.md  partitions.csv  sdkconfig  sdkconfig.old
processor_c/Python/: AI_chat.py  backup.c  capture.py  compress_rle.py  mqtt_test.py  udp_fec_receiver.py  udp_server.py  video_processor.py
processor_c/main/: CMakeLists.txt  Kconfig.projbuild  main.c  utils.c  utils.h
processor_c/main/uart/: uart.c  uart.h
processor_c/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_helpers.c  ui_img_accounticon_png_png.c  ui_img_home1_png.c  ui_img_home3_png.c  ui_img_loginicon_png.c
processor_c/main/wifi_udp/: llm_cloud.c  llm_cloud.h  mqtt.c  mqtt.h  wifi.c  wifi.h  wifi_udp.c  wifi_udp.h
(+25 files in other folders)
